--- a/simulation_v2/main.ipynb
+++ b/simulation_v2/main.ipynb
@@ -65,7 +65,7 @@
     "v_no_bf_1 = My_ue_nobf_1.mean_v\n",
     "\n",
     "My_ue_nobf_2 = downlink(6.5e3, 1, 1, theta=theta_bf_1, wk=wk_1, apply_bf=False) #should you change the 2nd variable?\n",
-    "My_ue_nobf_2.reflection_list = np.array([1])\n",
+    "My_ue_nobf_2.reflection_list = np.array([1,0.5])\n",
     "My_ue_nobf_2.x_rx_list = np.array([5,15])\n",
     "My_ue_nobf_2.y_rx_list = np.array([5,5])\n",
     "My_ue_nobf_2.simulation()\n",
@@ -83,7 +83,7 @@
     "v_bf_1 = My_ue_bf_1.mean_v\n",
     "\n",
     "My_ue_bf_2 = downlink(6.5e3, 1, 1, theta=theta_bf_2, wk=wk_2, apply_bf=True)\n",
-    "My_ue_bf_2.reflection_list = np.array([1])\n",
+    "My_ue_bf_2.reflection_list = np.array([1,0.5])\n",
     "My_ue_bf_2.x_rx_list = np.array([5,15])\n",
     "My_ue_bf_2.y_rx_list = np.array([5,5])\n",
     "My_ue_bf_2.simulation()\n",
@@ -197,7 +197,7 @@
     "\n",
     "fig,ax = plt.subplots()\n",
     "ax.scatter(np.real(symbolset_no_bf_2), np.imag(symbolset_no_bf_2), c='r', marker='x')\n",
-    "ax.scatter(np.real(symbolset_bf_2), np.imag(symbolset_bf_2), c='g', marker='x')\n",
+    "ax.scatter(np.real(symbolset_bf_2), np.imag(symbolset_bf), c='g', marker='x')\n",
     "ax.scatter(np.real(true_sym), np.imag(true_sym), c='b',marker='o')\n",
     "ax.legend(['RX DL, no BF', 'RX DL, BF','16QAM Constellation Points'])\n",
     "ax.set_ylim(-4, 4)\n",
@@ -223,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "0.0.0"
   },
   "orig_nbformat": 4
  },
