--- a/simulation_v3/main.ipynb
+++ b/simulation_v3/main.ipynb
@@ -312,7 +312,8 @@
     "\"\"\"\n",
     "\n",
     "# Plot Channel Response\n",
-    "# assume response is in 3-dim 'h' (time x delay x amplitude)\n",
+    "# 'What matters is the multipath spread.' More detailed channel will probably give multipath spread\n",
+    "\"\"\"\n",
     "h_x = signal.resample_poly(uplink_2.preamble[::-1].conj(),uplink_2.nsps,1)\n",
     "h_y = uplink_2.mean_v\n",
     "#hdelay = np.arange(2*len(h_x))-len(h_x)\n",
@@ -331,7 +332,7 @@
     "plt.ylabel('delay (sec)')\n",
     "plt.title('Channel Response')\n",
     "plt.show()\n",
-    "\n",
+    "\"\"\"\n",
     "\n",
     "# run this 4 times -> no bf, no reflect; no bf, reflect; bf, no reflect; bf, reflect;\n",
     "downlink_nobf_1 = downlink(fc, 1, 1, theta=theta_bf_1, wk=wk_1, apply_bf=False)\n",
@@ -465,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
